--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -3,20 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Imagem de fundo inteira</title>
+    <title>Fundo fixo de tela</title>
     <style>
         body{
             height: 100vh;
-            background-color: black;
+           /* background-color: black;
             background-image: url(imagens/wallpaper002.jpg);
             background-position: center center;
             background-repeat: no-repeat;
+            background-size: cover;
+            background-attachment: fixed;*/
+
+            background: black url(imagens/wallpaper002.jpg) center center no-repeat fixed;
             background-size: cover;
         }
 
         main{
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
@@ -30,6 +34,9 @@
         <h1>
             Teste de Imagem de Fundo
         </h1>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur quos repudiandae aliquid perspiciatis ex eius repellendus nesciunt sed corrupti et totam cumque debitis illo, neque consectetur voluptatum. Fugiat, esse optio. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quod impedit laboriosam, sint harum error quam! Porro recusandae perspiciatis qui laudantium excepturi atque temporibus optio cumque quo? Temporibus, similique incidunt. Deserunt? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas, dignissimos dolorum deleniti nihil voluptatibus mollitia corporis minus, possimus, atque quam dicta. Tempore ipsum aliquam placeat hic adipisci atque ea quidem.</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur quos repudiandae aliquid perspiciatis ex eius repellendus nesciunt sed corrupti et totam cumque debitis illo, neque consectetur voluptatum. Fugiat, esse optio. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quod impedit laboriosam, sint harum error quam! Porro recusandae perspiciatis qui laudantium excepturi atque temporibus optio cumque quo? Temporibus, similique incidunt. Deserunt? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas, dignissimos dolorum deleniti nihil voluptatibus mollitia corporis minus, possimus, atque quam dicta. Tempore ipsum aliquam placeat hic adipisci atque ea quidem.</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur quos repudiandae aliquid perspiciatis ex eius repellendus nesciunt sed corrupti et totam cumque debitis illo, neque consectetur voluptatum. Fugiat, esse optio. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quod impedit laboriosam, sint harum error quam! Porro recusandae perspiciatis qui laudantium excepturi atque temporibus optio cumque quo? Temporibus, similique incidunt. Deserunt? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas, dignissimos dolorum deleniti nihil voluptatibus mollitia corporis minus, possimus, atque quam dicta. Tempore ipsum aliquam placeat hic adipisci atque ea quidem.</p>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur quos repudiandae aliquid perspiciatis ex eius repellendus nesciunt sed corrupti et totam cumque debitis illo, neque consectetur voluptatum. Fugiat, esse optio. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quod impedit laboriosam, sint harum error quam! Porro recusandae perspiciatis qui laudantium excepturi atque temporibus optio cumque quo? Temporibus, similique incidunt. Deserunt? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas, dignissimos dolorum deleniti nihil voluptatibus mollitia corporis minus, possimus, atque quam dicta. Tempore ipsum aliquam placeat hic adipisci atque ea quidem.</p>
     </main>
 </body>
