--- a/exercicios/ex026/mq001/index.html
+++ b/exercicios/ex026/mq001/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media Query</title>
+    <link rel="stylesheet" href="css/tela.css" media="screen">
+    <link rel="stylesheet" href="css/impressora.css" media="print">
 </head>
 
 <body>
