--- a/exercicios/ex026/mq005/index.html
+++ b/exercicios/ex026/mq005/index.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media Query</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"/>
+    <link rel="stylesheet" href="css/media-query.css">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 </head>
-<body>
+
+<body onresize="mudouTamanho()">
     <header>
         <h1>Meu Site</h1>
         <span id="burguer" class="material-symbols-outlined" onclick="clickMenu()">
             menu
-            </span>
+        </span>
         <menu id="itens">
             <ul>
                 <li><a href="#">Opção 1</a></li>
@@ -26,19 +30,45 @@
     <main>
         <article>
             <h2>Testando Media Queries</h2>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aperiam, blanditiis. Natus, cumque molestiae? Labore, neque accusantium earum ipsum fuga aliquam quaerat minima iste, autem deserunt incidunt asperiores, consequuntur totam nemo. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt maiores, quas atque aperiam culpa omnis? Eligendi accusantium ad fuga sapiente! Rem, reiciendis repellendus nulla suscipit labore quae at accusamus cupiditate?</p>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ab debitis soluta doloremque necessitatibus deserunt incidunt vel, nihil provident, totam molestiae nesciunt similique natus suscipit magnam in distinctio cupiditate quae laborum! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam, voluptatum! Ipsam eaque, officiis corporis temporibus, aperiam laboriosam accusantium, vel numquam voluptatum fugiat aut. Ipsam tempora omnis placeat culpa cumque minima.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At et ipsum veritatis sit. Tempore aliquam ipsam animi itaque sapiente sint, illum consequuntur odio, explicabo architecto esse natus accusamus maiores nihil! Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, dolore ducimus officiis blanditiis, fugit modi optio delectus praesentium, corporis voluptates eaque iste laborum sed quia maiores. Modi enim cumque laudantium. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae doloribus, aut debitis in libero possimus ad harum, nesciunt eaque omnis obcaecati. Maxime quasi, dolorem dignissimos inventore non expedita enim qui. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Culpa molestias vero adipisci assumenda necessitatibus officiis quod inventore nesciunt rem, quas doloribus placeat, cumque minus libero fugiat soluta ipsum. Delectus, a?</p>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aperiam, blanditiis. Natus, cumque molestiae?
+                Labore, neque accusantium earum ipsum fuga aliquam quaerat minima iste, autem deserunt incidunt
+                asperiores, consequuntur totam nemo. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt
+                maiores, quas atque aperiam culpa omnis? Eligendi accusantium ad fuga sapiente! Rem, reiciendis
+                repellendus nulla suscipit labore quae at accusamus cupiditate?</p>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ab debitis soluta doloremque necessitatibus
+                deserunt incidunt vel, nihil provident, totam molestiae nesciunt similique natus suscipit magnam in
+                distinctio cupiditate quae laborum! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam,
+                voluptatum! Ipsam eaque, officiis corporis temporibus, aperiam laboriosam accusantium, vel numquam
+                voluptatum fugiat aut. Ipsam tempora omnis placeat culpa cumque minima.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At et ipsum veritatis sit. Tempore aliquam ipsam
+                animi itaque sapiente sint, illum consequuntur odio, explicabo architecto esse natus accusamus maiores
+                nihil! Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, dolore ducimus officiis
+                blanditiis, fugit modi optio delectus praesentium, corporis voluptates eaque iste laborum sed quia
+                maiores. Modi enim cumque laudantium. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae
+                doloribus, aut debitis in libero possimus ad harum, nesciunt eaque omnis obcaecati. Maxime quasi,
+                dolorem dignissimos inventore non expedita enim qui. Lorem ipsum, dolor sit amet consectetur adipisicing
+                elit. Culpa molestias vero adipisci assumenda necessitatibus officiis quod inventore nesciunt rem, quas
+                doloribus placeat, cumque minus libero fugiat soluta ipsum. Delectus, a?</p>
         </article>
     </main>
     <script>
-        function clickMenu(){
-            if(itens.style.display == "block"){
-                itens.style.display = "none"
+
+        function mudouTamanho() {
+            if(window.innerWidth >= 768){
+                itens.style.display = "block"
             }else{
+                itens.style.display = "none"
+            }
+        }
+
+        function clickMenu() {
+            if (itens.style.display == "block") {
+                itens.style.display = "none"
+            } else {
                 itens.style.display = "block"
             };
         }
     </script>
 </body>
+
 </html>
