--- a/exercicios/ex027/flex002/index.html
+++ b/exercicios/ex027/flex002/index.html
@@ -10,13 +10,15 @@
             
             display: flex;
             text-align: center;
+            flex-direction: column-reverse;
         }
 
         div.item{
             border: 1px solid black;
-            background-color: cyan;
+            background-color: lightskyblue;
+            padding: 10px;
 
-            flex: auto;
+            
         }
     </style>
 </head>
